Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9132

Explain statements should not cause NPE in LogLineageRecord()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • None
    • Impala 3.4.0
    • Backend
    • ghx-label-8

    Description

      For DDLs, LogLineageRecord() adds certain fields to the lineageGraph in the backend. However, explain statements do not have a catalogOpExecutor causing a NPE.

      We should, in general, avoid creating lineage records for Explain as Atlas currently does not use them.

      Attachments

        Activity

          People

            anuragmantri Anurag Mantripragada
            anuragmantri Anurag Mantripragada
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: